--- a/concept.html
+++ b/concept.html
@@ -8,15 +8,9 @@
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
         />
 
-        <title>安原歯科医院</title>
-        <meta
-            name="Keywords"
-            content="レスポンシブ,HTMLテンプレート,ホームページ制作"
-        />
-        <meta
-            name="Description"
-            content="最新レスポンシブHTMLテンプレート no.005。このサイトの説明文を入れてください。"
-        />
+        <title>ないとうこどもクリニック</title>
+        <meta name="Keywords" content="" />
+        <meta name="Description" content="" />
 
         <link rel="stylesheet" href="css/style.css" />
 
@@ -28,7 +22,6 @@
             href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
             rel="stylesheet"
         />
-        <!-- Zen Maru Gothic -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -37,6 +30,7 @@
         />
         <link rel="stylesheet" href="css/addstyle.css" />
         <link rel="stylesheet" href="css/micromodal.css" />
+        <link rel="stylesheet" href="css/erikastyle.css" />
     </head>
     <body>
         <div class="scroll-fix">
@@ -45,7 +39,7 @@
 
                 <h1>
                     <a href="index.html"
-                        ><img src="img/demo-img/ico_cat01_brown.png"
+                        ><img src="img/naito-child-clinic-logo.png"
                     /></a>
                 </h1>
 
@@ -82,121 +76,70 @@
             <div class="content">
                 <div class="cont_wrap_effect">
                     <h2>私たちの目指すもの</h2>
-                    <p>
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。<br />
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。
-                    </p>
+                    <div class="cont_wrap_effect-text">
+                        <div class="effect-box">
+                            <p>
+                                当院が目指していることは3つあります。<br /><br />
+                                1.
+                                こども達とご家族の笑顔のために最善の医療を提供します。<br />
+                                2.
+                                こども達の主治医として、成人になるまでの成長と発達をサポートします。<br />
+                                3.
+                                みなさまが気軽に受診できるクリニックを目指します。
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <!--/cont_wrap-->
-
-                <div class="obi_001">
-                    <h2 class="effect">
-                        この病院の治療コンセプトを<br />
-                        キャッチこっぴーとして<br />
-                        ここに表記します。
-                    </h2>
-                    <p class="effect">
-                        お手本の説明文章お手本の説明文章
-                        お手本の説明文章お手本の説明文章<br />
-                        お手本の説明文章お手本の説明文章お手本の説明文章お手本の説明文章<br />
-                        お手本の説明文章お手本の説明文章お手本の説明文章お手本の説明文章
-                    </p>
+                <div class="obi_001 home-concept-wrapper">
+                    <div class="home-concept-box">
+                        <h2 class="effect">
+                            大切なおこさまのために<br />
+                            安全で安心できる医療を提供します
+                        </h2>
+                        <p class="effect mobile-small-text">
+                            当院では大切なお子様が健やかに成長し、<br />
+                            ご家族が安心して過ごせるよう適切な診断と治療を提供します。<br />
+                            <span class="mobile-small-text-1"
+                                >『こども達の未来を救う小児科医』</span
+                            >として、<br />
+                            大切なお子様の主治医になれるよう努めていきます。
+                        </p>
+                    </div>
                 </div>
                 <div class="cont_wrap effect">
                     <h2>院長ご挨拶</h2>
-                    <h3>すべての患者様にご満足いただくために</h3>
-                    <div class="img_right">
-                        <!-- 院長の写真 -->
-                        <img src="img/28021509_m.jpg" alt="サンプルイメージ" />
-                        <p>院長：内藤　恵莉香</p>
+                    <h3>未来ある子どもたちを救う</h3>
+                    <div>
+                        <div class="img_right">
+                            <img src="img/AdobeStock_501287816.jpeg" alt="" />
+                            <p>院長：内藤　恵莉香</p>
+                        </div>
+                        <p>
+                            はじめまして、院長の内藤恵莉香と申します。<br />
+                            大学院卒業後より10年間しずおか県立こども病院に勤め、
+                            2021年3月3日静岡市駿河区に『ないとうこどもクリニック』を開業いたしました。<br />
+                            こどもが大好きで、私の生まれ育った場所で沢山の子ども達を救いたいと思っています。
+                            育児での不安や、分からないことなど病気以外でお困りのことでも、どんなことでも気軽にご相談ください。<br />
+                            <br />
+                            末永く地域の皆様に愛されるクリニックを目指して頑張りますので、どうぞよろしくお願いいたします。
+                        </p>
                     </div>
-                    <p>
-                        お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章お手本のあいさつ文章
-                    </p>
                 </div>
                 <div class="cont_wrap effect">
-                    <h3>その他追加したい内容</h3>
+                    <h3>初めて受診される方</h3>
                     <div class="img_left">
-                        <img
-                            src="img/demo-img/pic_concept01.png"
-                            alt="サンプルイメージ"
-                        />
+                        <img src="img/AdobeStock_608062503.jpeg" alt="" />
                     </div>
                     <p>
-                        その他病院のコンセプトなどありましたら、ここに追記します。
-                        その他病院のコンセプトなどありましたら、ここに追記します。
-                        その他病院のコンセプトなどありましたら、ここに追記します。
-                        その他病院のコンセプトなどありましたら、ここに追記します。
+                        初めてお越しいただく方は、当院へ直接ご連絡ください。<br />
+                        健康保険証、母子手帳、お薬手帳、紹介状（持っている方）が必要となりますので、あらかじめご準備してから受診をお願い致します。
                     </p>
                 </div>
-                <!--/obi_001-->
             </div>
-            <!--/content-->
             <footer>
-                <div class="footer effect">
-                    <div class="footer__infomation">
-                        <div class="base-info">
-                            <div class="base-info__logo">
-                                <img
-                                    src="img/demo-img/ico_cat01_brown.png"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="base-info__text">
-                                <p>
-                                    ないとうこどもクリニック<br />
-                                    静岡県静岡市駿河区◯◯<br />
-                                    TEL.0120-000-0000
-                                </p>
-                            </div>
-                        </div>
-                        <div class="map">Google map</div>
-                    </div>
-
-                    <div class="footer__nav">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="concept.html">当院について</a></li>
-                            <li><a href="works.html">診療内容</a></li>
-                            <li><a href="about.html">お知らせ/コラム</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/cont_wrap-->
-
-                <address>Copyright (C) saimon. All Rights Reserved.</address>
-
-                <!--　削除禁止【ＰＲ枠】ここから　-->
-                <!--prno.220309ver3.1-->
-                <div class="box_pr">
-                    <ul>
-                        <li>
-                            Design by
-                            <a
-                                href="https://www.megapx.com/"
-                                title="ホームページ制作・ロゴデザイン：メガピクス"
-                                target="_blank"
-                                >Megapx</a
-                            >
-                        </li>
-                        <li>
-                            Template by
-                            <a
-                                href="https://www.s-hoshino.com/"
-                                title="HTMLテンプレート配布元：フリー素材屋Hoshino"
-                                target="_blank"
-                                >s-hoshino.com</a
-                            >、<a
-                                href="https://www.sozai-dx.com/"
-                                title="無料素材・フリー素材DX"
-                                target="_blank"
-                                >sozai-dx.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <!--　/削除禁止【ＰＲ枠】ここまで　-->
+                <address>
+                    ©2023 naito children's clinic. All Rights Reserved
+                </address>
             </footer>
 
             <div class="to_top">
