--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,9 @@
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
         />
 
-        <title>安原歯科医院</title>
-        <meta
-            name="Keywords"
-            content="レスポンシブ,HTMLテンプレート,ホームページ制作"
-        />
-        <meta
-            name="Description"
-            content="最新レスポンシブHTMLテンプレート no.005。このサイトの説明文を入れてください。"
-        />
+        <title>ないとうこどもクリニック</title>
+        <meta name="Keywords" content="" />
+        <meta name="Description" content="" />
 
         <link rel="stylesheet" href="css/style.css" />
 
@@ -28,7 +22,6 @@
             href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
             rel="stylesheet"
         />
-        <!-- ZEN MARU GOTHIC -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -38,6 +31,7 @@
         <link rel="stylesheet" href="css/mailform.css" />
         <link rel="stylesheet" href="css/addstyle.css" />
         <link rel="stylesheet" href="css/micromodal.css" />
+        <link rel="stylesheet" href="css/erikastyle.css"/>
     </head>
     <body>
         <div class="scroll-fix">
@@ -46,7 +40,7 @@
 
                 <h1>
                     <a href="index.html"
-                        ><img src="img/demo-img/ico_cat01_brown.png"
+                        ><img src="img/naito-child-clinic-logo.png"
                     /></a>
                 </h1>
 
@@ -83,11 +77,12 @@
             <div class="content">
                 <div class="cont_wrap effect">
                     <h2>お問い合わせ</h2>
-                    <p>
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。<br />
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。
-                    </p>
-
+                    <div class="center-box">
+                    <div>
+                        お問い合わせはこちらからになります。<br>お急ぎの方や直接お話しされたい方は、当院へご連絡ください。電話番号は下記に記載してあります。
+                    </div>
+                    </div>
+                </div>
                     <form
                         action="php/mailform.php"
                         method="post"
@@ -196,74 +191,9 @@
                         </p>
                     </form>
                 </div>
-                <!--/cont_wrap-->
             </div>
-
             <footer>
-                <div class="footer effect">
-                    <div class="footer__infomation">
-                        <div class="base-info">
-                            <div class="base-info__logo">
-                                <img
-                                    src="img/demo-img/ico_cat01_brown.png"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="base-info__text">
-                                <p>
-                                    安原歯科医院<br />
-                                    住所住所住所住所住所住所住所<br />
-                                    TEL.0120-000-0000
-                                </p>
-                            </div>
-                        </div>
-                        <div class="map">Google map</div>
-                    </div>
-
-                    <div class="footer__nav">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="concept.html">当院について</a></li>
-                            <li><a href="works.html">診療内容</a></li>
-                            <li><a href="about.html">お知らせ/コラム</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/cont_wrap-->
-
-                <address>Copyright (C) saimon. All Rights Reserved.</address>
-
-                <!--　削除禁止【ＰＲ枠】ここから　-->
-                <!--prno.220309ver3.1-->
-                <div class="box_pr">
-                    <ul>
-                        <li>
-                            Design by
-                            <a
-                                href="https://www.megapx.com/"
-                                title="ホームページ制作・ロゴデザイン：メガピクス"
-                                target="_blank"
-                                >Megapx</a
-                            >
-                        </li>
-                        <li>
-                            Template by
-                            <a
-                                href="https://www.s-hoshino.com/"
-                                title="HTMLテンプレート配布元：フリー素材屋Hoshino"
-                                target="_blank"
-                                >s-hoshino.com</a
-                            >、<a
-                                href="https://www.sozai-dx.com/"
-                                title="無料素材・フリー素材DX"
-                                target="_blank"
-                                >sozai-dx.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <!--　/削除禁止【ＰＲ枠】ここまで　-->
+                <address>©2023 naito children's clinic. All Rights Reserved</address>
             </footer>
 
             <div class="to_top">
