--- a/coram.html
+++ b/coram.html
@@ -8,15 +8,9 @@
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
         />
 
-        <title>安原歯科医院</title>
-        <meta
-            name="Keywords"
-            content="レスポンシブ,HTMLテンプレート,ホームページ制作"
-        />
-        <meta
-            name="Description"
-            content="最新レスポンシブHTMLテンプレート no.005。このサイトの説明文を入れてください。"
-        />
+        <title>ないとうこどもクリニック</title>
+        <meta name="Keywords" content="" />
+        <meta name="Description" content="" />
 
         <link rel="stylesheet" href="css/style.css" />
 
@@ -28,7 +22,6 @@
             href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
             rel="stylesheet"
         />
-        <!-- ZEN MARU GOCHIC -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -45,7 +38,7 @@
 
                 <h1>
                     <a href="index.html"
-                        ><img src="img/demo-img/ico_cat01_brown.png"
+                        ><img src="img/naito-child-clinic-logo.png"
                     /></a>
                 </h1>
 
@@ -84,122 +77,30 @@
 
             <div class="content">
                 <div class="cont_wrap effect">
-                    <h2>コラムタイトル</h2>
+                    <h2>ハロウィンイベント</h2>
 
                     <div class="img_center">
-                        <span>画像タイトル</span>
-                        <img
-                            src="img/demo-img/pic_concept01.png"
-                            alt="サンプルイメージ"
-                        />
+                        <img src="img/27291639_s.jpg" alt="" />
                     </div>
+                    <div class="coram-text-box">
+                    <p>※これは2022年10月30日のハロウィンイベントの写真です</p>
+
+                    <h3>こども達の笑顔溢れるハロウィン</h3>
 
                     <p>
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。<br />
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。
+                        ハロウィンイベントも開院してから今年で3回目となります。こども達の笑顔が見たくて始めたイベントですが、毎年通院しているこども達から地域に住んでいるこども達まで、沢山のこども達が集まってくれます。<br />
+                        コロナによって大きなイベント事が減ってしまったり、大人数でわいわい楽しむ機会も少なくなってしまいました。そんなこども達に、みんなで集まって楽しむ機会を与えてあげたい思いもあり、これからもハロウィンイベントは続けていこうとおもっております。
                     </p>
-
-                    <h3>見出し文字</h3>
-
-                    <p>
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。<br />
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。
-                    </p>
-                    <h3>見出し文字</h3>
+                    <h3>Trick or Treat</h3>
 
                     <p>
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。<br />
-                        これはイメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。
+                        院長に看護師、受付のスタッフ誰でもいいので、『トリックオアトリート』と言ってくれれば、おいしいお菓子をプレゼントします！<br />
+                        お越しになる時は、こども達だけでなくお父さん・お母さんもぜひ仮装してきてくださいね。こどもから大人まで、みんなでハロウィンを楽しみましょう。
                     </p>
                 </div>
-
-                <div class="contact effect">
-                    <div class="box_att effect">
-                        <h2>お問い合わせ</h2>
-                    </div>
-                    <div class="contact__textbox contact-text effect">
-                        <p>お気軽にご相談ください！</p>
-                        <div class="btn_cnt">
-                            <a href="#"
-                                ><i class="fas fa-arrow-right"></i>お問い合せ</a
-                            >
-                        </div>
-                        <p class="contact-text__tell">
-                            <a href="#" class="tel"
-                                ><i class="fas fa-phone-alt"></i
-                                ><strong>0120-000-0000</strong></a
-                            ><br />
-                            電話受付時間　平日8：00～17：00
-                        </p>
-                    </div>
                 </div>
-            </div>
-
             <footer>
-                <div class="footer effect">
-                    <div class="footer__infomation">
-                        <div class="base-info">
-                            <div class="base-info__logo">
-                                <img
-                                    src="img/demo-img/ico_cat01_brown.png"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="base-info__text">
-                                <p>
-                                    安原歯科医院<br />
-                                    住所住所住所住所住所住所住所<br />
-                                    TEL.0120-000-0000
-                                </p>
-                            </div>
-                        </div>
-                        <div class="map">Google map</div>
-                    </div>
-
-                    <div class="footer__nav">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="concept.html">当院について</a></li>
-                            <li><a href="works.html">診療内容</a></li>
-                            <li><a href="news.html">お知らせ/コラム一覧</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/cont_wrap-->
-
-                <address>Copyright (C) saimon. All Rights Reserved.</address>
-
-                <!--　削除禁止【ＰＲ枠】ここから　-->
-                <!--prno.220309ver3.1-->
-                <div class="box_pr">
-                    <ul>
-                        <li>
-                            Design by
-                            <a
-                                href="https://www.megapx.com/"
-                                title="ホームページ制作・ロゴデザイン：メガピクス"
-                                target="_blank"
-                                >Megapx</a
-                            >
-                        </li>
-                        <li>
-                            Template by
-                            <a
-                                href="https://www.s-hoshino.com/"
-                                title="HTMLテンプレート配布元：フリー素材屋Hoshino"
-                                target="_blank"
-                                >s-hoshino.com</a
-                            >、<a
-                                href="https://www.sozai-dx.com/"
-                                title="無料素材・フリー素材DX"
-                                target="_blank"
-                                >sozai-dx.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <!--　/削除禁止【ＰＲ枠】ここまで　-->
+                <address>©2023 naito children's clinic. All Rights Reserved</address>
             </footer>
 
             <div class="to_top">
