--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
         />
 
         <title>ないとうこどもクリニック</title>
-        <meta
-            name="Keywords"
-            content="レスポンシブ,HTMLテンプレート,ホームページ制作"
-        />
-        <meta
-            name="Description"
-            content="最新レスポンシブHTMLテンプレート no.005。このサイトの説明文を入れてください。"
-        />
+        <meta name="Keywords" content="" />
+        <meta name="Description" content="" />
 
         <link rel="stylesheet" href="css/style.css" />
 
@@ -24,18 +18,6 @@
             href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
             rel="stylesheet"
         />
-        <!-- ないとうこどもクリニック文字 Cherry Bomb One -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-            rel="stylesheet"
-        />
-        <!-- ナビの文字 -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -58,7 +40,7 @@
             <header>
                 <h1>
                     <a href="index.html"
-                        ><img src="img/demo-img/ico_cat01_brown.png"
+                        ><img src="img/naito-child-clinic-logo.png"
                     /></a>
                 </h1>
 
@@ -81,48 +63,41 @@
                 </nav>
             </header>
             <div class="index-top">
-                <div id="top_catch" class="effect">
-                    <div class="cloud">
-                        <h1>ないとう<br />こどもクリニック</h1>
-                        <!-- <p>こどもたちの未来を救う</p> -->
-                    </div>
-                </div>
+                <div id="top_catch" class="effect"></div>
             </div>
-
             <div class="content">
                 <div class="cont_wrap effect clfix">
                     <h2>
                         <span>NEWS</span><i class="fas fa-rss"></i><br />
                         お知らせ・コラム
                     </h2>
-
                     <div class="box_left">
                         <ul class="ul_news">
                             <li>
                                 <a class="news-modal-btn">
-                                    <span class="date">2022.12.20</span
+                                    <span class="date">2023.12.23</span
                                     ><span class="i_con cl2">new</span
                                     >年末・年始のお休みについて
                                 </a>
                             </li>
                             <li>
                                 <a class="news-modal-btn"
-                                    ><span class="date">2022.3.10</span
+                                    ><span class="date">2023.10.30</span
                                     ><span
-                                        >マウスピース型歯列矯正治療のご案内</span
+                                        >院内ハロウィンイベントについて</span
                                     ></a
                                 >
                             </li>
                             <li>
                                 <a class="news-modal-btn"
-                                    ><span class="date">2022.2.01</span
-                                    ><span>お知らせのデモ</span></a
+                                    ><span class="date">2023.9.01</span
+                                    ><span>一般診療時間の変更について</span></a
                                 >
                             </li>
                             <li>
                                 <a class="news-modal-btn"
-                                    ><span class="date">2022.2.01</span
-                                    ><span>お知らせのデモ</span></a
+                                    ><span class="date">2023.8.13</span
+                                    ><span>臨時休診について</span></a
                                 >
                             </li>
                         </ul>
@@ -134,17 +109,17 @@
                                     <div class="coram">
                                         <div class="coram__imgbox">
                                             <img
-                                                src="img\teddy-bear-6937569_1280.jpg"
+                                                src="img/3861554_s.jpg"
                                                 alt=""
                                                 class="coram__img"
                                             />
                                         </div>
                                         <div class="coram__textbox">
                                             <div class="coram__title">
-                                                コラムのタイトル
+                                                ハロウィンイベント
                                             </div>
                                             <div class="coram__discription">
-                                                コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章
+                                                当院では、10月30日(金)にハロウィンイベントを行います。院内をハロウィン風に飾り付けしたり、来院してくださった方にお菓子をお配りします。
                                             </div>
                                         </div>
                                     </div>
@@ -155,17 +130,17 @@
                                     <div class="coram">
                                         <div class="coram__imgbox">
                                             <img
-                                                src="img/demo-img/pic_concept01.png"
+                                                src="img/27386578_s.jpg"
                                                 alt=""
                                                 class="coram__img"
                                             />
                                         </div>
                                         <div class="coram__textbox">
                                             <div class="coram__title">
-                                                コラムのタイトル
+                                                ファシリティードッグ
                                             </div>
                                             <div class="coram__discription">
-                                                コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章コラムの説明文章
+                                                5月13日(金)に静岡こども病院より、ファシリティードッグの『しずちゃん』が当院に遊びに来てくれます。2時間程度の時間になりますが、ぜひしずちゃんと楽しい時間を過ごしてください。
                                             </div>
                                         </div>
                                     </div>
@@ -179,66 +154,53 @@
                         >
                     </div>
                 </div>
-                <!-- /cont_wrap -->
-                <!-- 理念 -->
-                <div class="obi_001">
-                    <h2 class="effect">
-                        当院の理念<br />
-                        <span>Concept</span>
-                    </h2>
-                    <p class="effect-p">
-                        未来ある子どもたちに最善の医療を提供し、<br />
-                        ご家族と一緒に成長を見守っていくことを目指しています。<br />
-                    </p>
-                    <div class="btn_cnt effect">
-                        <a href="concept.html"
-                            ><i class="fas fa-arrow-right"></i>当院について</a
-                        >
+                <div class="obi_001 home-concept-wrapper">
+                    <div class="home-concept-box">
+                        <h2 class="effect">
+                            当院の理念<br />
+                            <span>Concept</span>
+                        </h2>
+                        <p class="effect-p">
+                            こどもたちに最善の医療を提供し、<br />ご家族と一緒に成長を見守っていくことを目指しています。
+                        </p>
+                        <div class="btn_cnt effect">
+                            <a href="concept.html"
+                                ><i class="fas fa-arrow-right"></i
+                                >当院について</a
+                            >
+                        </div>
                     </div>
                 </div>
-                <!--/obi_001-->
-
                 <div class="pick_up effect">
                     <div class="box_att">
                         <h2>治療内容</h2>
-                        <p>
-                            一般的な風邪の症状や乳幼児健診、予防接種だけでなく、成長・発達や育児に関する悩みなど心配事がありましたら、お気軽にご相談ください。
-                        </p>
+                        <div class="center-box">
+                            <div>
+                                一般的な風邪症状や乳幼児健診、予防接種だけでなく、<br />成長・発達や育児の悩みなど心配事がありましたら、お気軽にご相談ください。
+                            </div>
+                        </div>
                     </div>
                     <ul>
                         <li class="effect d_02">
-                            <!-- 治療内容　写真1 -->
                             <a href="news.html"
-                                ><img
-                                    src="img/26956869_s.jpg"
-                                    alt="サンプルイメージ"
-                                />
+                                ><img src="img/26956869_s.jpg" alt="" />
                                 <div>小児科</div></a
                             >
                         </li>
                         <li class="effect d_04">
-                            <!-- 治療内容　写真2 -->
                             <a href="about.html"
-                                ><img
-                                    src="img/4461392_s.jpg"
-                                    alt="サンプルイメージ"
-                                />
+                                ><img src="img/4461392_s.jpg" alt="" />
                                 <div>乳幼児健診</div></a
                             >
                         </li>
                         <li class="effect d_06">
-                            <!-- 治療内容　写真3 -->
                             <a href="works.html"
-                                ><img
-                                    src="img/1381640_s.jpg"
-                                    alt="サンプルイメージ"
-                                />
+                                ><img src="img/1381640_s.jpg" alt="" />
                                 <div>予防接種</div></a
                             >
                         </li>
                     </ul>
                 </div>
-                <!--/pick_up-->
                 <div class="schedule effect">
                     <div class="box_att effect">
                         <h2>診療予定</h2>
@@ -289,94 +251,69 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact effect">
+                <div class="contact effect width-content">
                     <div class="box_att effect">
                         <h2>お問い合わせ</h2>
                     </div>
                     <div class="contact__textbox contact-text effect">
-                        <p>お気軽にご相談ください！</p>
-                        <div class="btn_cnt">
-                            <a href="contact.html"
-                                ><i class="fas fa-arrow-right"></i>お問い合せ</a
-                            >
+                        <div class="center-box">
+                            <div class="contact-minibox">
+                                <p>お気軽にご相談ください！</p>
+                                <div class="btn_cnt">
+                                    <a href="contact.html"
+                                        ><i class="fas fa-arrow-right"></i
+                                        >お問い合わせ</a
+                                    >
+                                </div>
+                                <p class="contact-text__tell">
+                                    <a href="#" class="tel"
+                                        ><i class="fas fa-phone-alt"></i
+                                        ><strong>0120-000-0000</strong></a
+                                    ><br />
+                                    電話受付時間　平日9：00～18：00
+                                </p>
+                            </div>
                         </div>
-                        <p class="contact-text__tell">
-                            <a href="#" class="tel"
-                                ><i class="fas fa-phone-alt"></i
-                                ><strong>0120-000-0000</strong></a
-                            ><br />
-                            電話受付時間　平日9：00～18：00
-                        </p>
                     </div>
                 </div>
-                <!--/cont_wrap-->
             </div>
-            <!--/content-->
-            <footer>
+            <section class="content width-content">
+                <h2>アクセス</h2>
                 <div class="footer effect">
                     <div class="footer__infomation">
                         <div class="base-info">
                             <div class="base-info__logo">
                                 <img
-                                    src="img/demo-img/ico_cat01_brown.png"
+                                    src="img/naito-child-clinic-logo2.png"
                                     alt=""
                                 />
                             </div>
-                            <div class="base-info__text">
-                                <p>
-                                    ないとうこどもクリニック<br />
-                                    静岡県静岡市駿河区◯◯<br />
-                                    TEL.0120-000-0000
-                                </p>
-                            </div>
+                            <p style="text-align: start">
+                                ないとうこどもクリニック<br />
+                                静岡県静岡市駿河区◯◯&emsp;<br
+                                    class="mobile-br"
+                                />
+                                TEL 0120-000-0000
+                            </p>
                         </div>
-                        <div class="map">Google map</div>
-                    </div>
-
-                    <div class="footer__nav">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="concept.html">当院について</a></li>
-                            <li><a href="works.html">診療内容</a></li>
-                            <li><a href="about.html">お知らせ/コラム</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                        </ul>
+                        <div class="center-box">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6538.984660842998!2d138.393726143185!3d34.96933083316865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601a361d7d77cf3d%3A0x42372056b5878efd!2z44CSNDIyLTgwNzYg6Z2Z5bKh55yM6Z2Z5bKh5biC6ae_5rKz5Yy65YWr5bmh!5e0!3m2!1sja!2sjp!4v1699096061070!5m2!1sja!2sjp"
+                                width="800"
+                                height="450"
+                                style="border: 0"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                            ></iframe>
+                        </div>
                     </div>
                 </div>
-                <!--/cont_wrap-->
-
-                <address>Copyright (C) saimon. All Rights Reserved.</address>
-
-                <!--　削除禁止【ＰＲ枠】ここから　-->
-                <!--prno.220309ver3.1-->
-                <div class="box_pr">
-                    <ul>
-                        <li>
-                            Design by
-                            <a
-                                href="https://www.megapx.com/"
-                                title="ホームページ制作・ロゴデザイン：メガピクス"
-                                target="_blank"
-                                >Megapx</a
-                            >
-                        </li>
-                        <li>
-                            Template by
-                            <a
-                                href="https://www.s-hoshino.com/"
-                                title="HTMLテンプレート配布元：フリー素材屋Hoshino"
-                                target="_blank"
-                                >s-hoshino.com</a
-                            >、<a
-                                href="https://www.sozai-dx.com/"
-                                title="無料素材・フリー素材DX"
-                                target="_blank"
-                                >sozai-dx.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <!--　/削除禁止【ＰＲ枠】ここまで　-->
+            </section>
+            <footer>
+                <address>
+                    ©2023 naito children's clinic. All Rights Reserved
+                </address>
             </footer>
 
             <div class="to_top">
@@ -385,7 +322,6 @@
                 ></a>
             </div>
 
-            <!-- modal -->
             <div id="modal-1" aria-hidden="true" class="micromodal-slide modal">
                 <div class="modal__overlay" tabindex="-1" data-micromodal-close>
                     <div
@@ -396,7 +332,7 @@
                     >
                         <div class="modal__header">
                             <h2 id="modal-1-title" class="modal__title">
-                                お知らせタイトル
+                                年末・年始のお休みについて
                             </h2>
                             <button
                                 class="modal__close"
@@ -404,10 +340,11 @@
                                 data-micromodal-close
                             ></button>
                         </div>
-                        <p>2020/12/11</p>
+                        <p>2023.12.23</p>
                         <div id="modal-1-content" class="modal__content">
-                            お知らせ内容テキストお知らせ内容テキストお知らせ内容テキスト<br />
-                            お知らせ内容テキストお知らせ内容テキストお知らせ内容テキスト
+                            年末年始休診日は下記のとおりです。<br />
+                            2023年12月29日(金)～2024年1月3日(水)まで休診となります。<br />
+                            ご迷惑をおかけしますが、よろしくお願いします。
                         </div>
                         <div class="modal__footer"></div>
                     </div>
