--- a/news.html
+++ b/news.html
@@ -8,15 +8,9 @@
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
         />
 
-        <title>安原歯科医院</title>
-        <meta
-            name="Keywords"
-            content="レスポンシブ,HTMLテンプレート,ホームページ制作"
-        />
-        <meta
-            name="Description"
-            content="最新レスポンシブHTMLテンプレート no.005。このサイトの説明文を入れてください。"
-        />
+        <title>ないとうこどもクリニック</title>
+        <meta name="Keywords" content="" />
+        <meta name="Description" content="" />
 
         <link rel="stylesheet" href="css/style.css" />
 
@@ -28,7 +22,6 @@
             href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
             rel="stylesheet"
         />
-        <!-- ZEN MARU GOCHIC -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -45,7 +38,7 @@
 
                 <h1>
                     <a href="index.html"
-                        ><img src="img/demo-img/ico_cat01_brown.png"
+                        ><img src="img/naito-child-clinic-logo.png"
                     /></a>
                 </h1>
 
@@ -82,62 +75,59 @@
             <div class="content">
                 <div class="cont_wrap effect">
                     <h2>お知らせ・コラム</h2>
-                    <p>
-                        お知らせ・イベント情報一覧イメージ確認用のサンプル文言になります。適当な文言に置き換えてお使いください。
-                    </p>
+                    <div>
+                        <p>
+                            お知らせやイベント情報はこちらに記載しておりますので、ご確認ください。
+                        </p>
+                    </div>
                     <ul class="ul_news">
                         <li>
                             <a class="news-modal-btn">
-                                <span class="date">2022.12.20</span
+                                <span class="date">2023.12.23</span
                                 ><span class="i_con cl2">new</span
                                 >年末・年始のお休みについて
                             </a>
                         </li>
                         <li>
                             <a class="news-modal-btn"
-                                ><span class="date">2022.3.10</span
-                                ><span
-                                    >マウスピース型歯列矯正治療のご案内</span
-                                ></a
+                                ><span class="date">2023.10.30</span
+                                ><span>院内ハロウィンイベントについて</span></a
                             >
                         </li>
                         <li>
                             <a class="news-modal-btn"
-                                ><span class="date">2022.2.01</span
-                                ><span>お知らせのデモ</span></a
+                                ><span class="date">2023.9.01</span
+                                ><span>一般診療時間の変更について</span></a
                             >
                         </li>
                         <li>
                             <a class="news-modal-btn"
-                                ><span class="date">2022.2.01</span
-                                ><span>お知らせのデモ</span></a
+                                ><span class="date">2023.8.13</span
+                                ><span>臨時休診のお知らせ</span></a
                             >
                         </li>
                         <li>
                             <a class="news-modal-btn">
-                                <span class="date">2022.12.20</span
-                                ><span class="i_con cl2">new</span
-                                >年末・年始のお休みについて
+                                <span class="date">2023.7.20</span
+                                ><span>夏季休暇のお知らせ</span>
                             </a>
                         </li>
                         <li>
                             <a class="news-modal-btn"
-                                ><span class="date">2022.3.10</span
-                                ><span
-                                    >マウスピース型歯列矯正治療のご案内</span
-                                ></a
+                                ><span class="date">2023.6.13</span
+                                ><span>休日当番医のお知らせ</span></a
                             >
                         </li>
                         <li>
                             <a class="news-modal-btn"
-                                ><span class="date">2022.2.01</span
-                                ><span>お知らせのデモ</span></a
+                                ><span class="date">2023.5.01</span
+                                ><span>コロナワクチン接種について</span></a
                             >
                         </li>
                         <li>
                             <a class="news-modal-btn"
-                                ><span class="date">2022.2.01</span
-                                ><span>お知らせのデモ</span></a
+                                ><span class="date">2023.3.3</span
+                                ><span>開院2年記念のお知らせ</span></a
                             >
                         </li>
                     </ul>
@@ -167,18 +157,42 @@
                         </li>
                     </ul>
                 </div>
-                <!--/cont_wrap-->
 
                 <div class="box_cont">
                     <div class="box_c_in coram-flexbox effect coram-list">
-                        <img
-                            src="img/demo-img/pic_concept01.png"
-                            alt="サンプルイメージ"
-                        />
-                        <p class="coram__time">2020/12/01</p>
-                        <h2>コラムタイトル</h2>
+                        <img src="img/3861554_s.jpg" alt="" />
+                        <p class="coram__time">2023.10.30</p>
+                        <h2>ハロウィンイベント</h2>
                         <p>
-                            コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容
+                            当院では、10月30日(金)にハロウィンイベントを行います。院内をハロウィン風に飾り付けしたり、来院してくださった方にお菓子をお配りします。院長も仮装するのでお楽しみに。
+                        </p>
+                        <div class="btn_cnt">
+                            <a href="coram.html"
+                                ><i class="fas fa-arrow-right"></i
+                                >コラムを見る</a
+                            >
+                        </div>
+                    </div>
+                    <div class="box_c_in coram-flexbox effect coram-list">
+                        <img src="img/22285823_s.jpg" alt="" />
+                        <p class="coram__time">2023.8.13</p>
+                        <h2>院内夏祭り</h2>
+                        <p>
+                            8月13日(火)～8月15日(木)まで、院内にて夏祭りを行います。この3日間は午前中のみの診察とし、午後に夏祭りを開催します。食べ物やヨーヨーなど、ちょっとした出し物もあるのでぜひお越しください。
+                        </p>
+                        <div class="btn_cnt">
+                            <a href="coram.html"
+                                ><i class="fas fa-arrow-right"></i
+                                >コラムを見る</a
+                            >
+                        </div>
+                    </div>
+                    <div class="box_c_in coram-flexbox effect coram-list">
+                        <img src="img/27386578_s.jpg" alt="" />
+                        <p class="coram__time">2023.5.13</p>
+                        <h2>ファシリティードッグ</h2>
+                        <p>
+                            5月13日(金)に静岡こども病院より、ファシリティードッグの『しずちゃん』が当院に遊びに来てくれます。2時間程の時間となりますが、ぜひしずちゃんと楽しい時間を過ごしてください。
                         </p>
                         <div class="btn_cnt">
                             <a href="coram.html"
@@ -189,47 +203,13 @@
                     </div>
                     <div class="box_c_in coram-flexbox effect coram-list">
                         <img
-                            src="img/demo-img/pic_concept01.png"
-                            alt="サンプルイメージ"
+                            src="img/childrens-hospital-4043119_1280.jpg"
+                            alt=""
                         />
-                        <p class="coram__time">2020/12/01</p>
-                        <h2>コラムタイトル</h2>
+                        <p class="coram__time">2023.3.3</p>
+                        <h2>開院2年記念</h2>
                         <p>
-                            コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容
-                        </p>
-                        <div class="btn_cnt">
-                            <a href="coram.html"
-                                ><i class="fas fa-arrow-right"></i
-                                >コラムを見る</a
-                            >
-                        </div>
-                    </div>
-                    <div class="box_c_in coram-flexbox effect coram-list">
-                        <img
-                            src="img/demo-img/pic_concept01.png"
-                            alt="サンプルイメージ"
-                        />
-                        <p class="coram__time">2020/12/01</p>
-                        <h2>コラムタイトル</h2>
-                        <p>
-                            コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容
-                        </p>
-                        <div class="btn_cnt">
-                            <a href="coram.html"
-                                ><i class="fas fa-arrow-right"></i
-                                >コラムを見る</a
-                            >
-                        </div>
-                    </div>
-                    <div class="box_c_in coram-flexbox effect coram-list">
-                        <img
-                            src="img/demo-img/pic_concept01.png"
-                            alt="サンプルイメージ"
-                        />
-                        <p class="coram__time">2020/12/01</p>
-                        <h2>コラムタイトル</h2>
-                        <p>
-                            コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容コラム説明内容
+                            2023.3.3(金)をもちまして、当院は開院2年となります！これまで無事にないとうクリニックが続けてこられたのも、皆様の支えとこども達の笑顔があったからです。これからも当院をよろしくお願いします。
                         </p>
                         <div class="btn_cnt">
                             <a href="coram.html"
@@ -263,95 +243,13 @@
                             <a href="#"><span>»</span></a>
                         </li>
                     </ul>
-                </div>
-                <!--/box_cont-->
-                <div class="contact effect">
-                    <div class="box_att effect">
-                        <h2>お問い合わせ</h2>
-                    </div>
-                    <div class="contact__textbox contact-text effect">
-                        <p>お気軽にご相談ください！</p>
-                        <div class="btn_cnt">
-                            <a href="contact.html"
-                                ><i class="fas fa-arrow-right"></i>お問い合せ</a
-                            >
-                        </div>
-                        <p class="contact-text__tell">
-                            <a href="#" class="tel"
-                                ><i class="fas fa-phone-alt"></i
-                                ><strong>0120-000-0000</strong></a
-                            ><br />
-                            電話受付時間　平日8：00～17：00
-                        </p>
-                    </div>
                 </div>
             </div>
 
             <footer>
-                <div class="footer effect">
-                    <div class="footer__infomation">
-                        <div class="base-info">
-                            <div class="base-info__logo">
-                                <img
-                                    src="img/demo-img/ico_cat01_brown.png"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="base-info__text">
-                                <p>
-                                    安原歯科医院<br />
-                                    住所住所住所住所住所住所住所<br />
-                                    TEL.0120-000-0000
-                                </p>
-                            </div>
-                        </div>
-                        <div class="map">Google map</div>
-                    </div>
-
-                    <div class="footer__nav">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="concept.html">当院について</a></li>
-                            <li><a href="works.html">診療内容</a></li>
-                            <li><a href="about.html">お知らせ/コラム</a></li>
-                            <li><a href="contact.html">お問い合わせ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/cont_wrap-->
-
-                <address>Copyright (C) saimon. All Rights Reserved.</address>
-
-                <!--　削除禁止【ＰＲ枠】ここから　-->
-                <!--prno.220309ver3.1-->
-                <div class="box_pr">
-                    <ul>
-                        <li>
-                            Design by
-                            <a
-                                href="https://www.megapx.com/"
-                                title="ホームページ制作・ロゴデザイン：メガピクス"
-                                target="_blank"
-                                >Megapx</a
-                            >
-                        </li>
-                        <li>
-                            Template by
-                            <a
-                                href="https://www.s-hoshino.com/"
-                                title="HTMLテンプレート配布元：フリー素材屋Hoshino"
-                                target="_blank"
-                                >s-hoshino.com</a
-                            >、<a
-                                href="https://www.sozai-dx.com/"
-                                title="無料素材・フリー素材DX"
-                                target="_blank"
-                                >sozai-dx.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <!--　/削除禁止【ＰＲ枠】ここまで　-->
+                <address>
+                    ©2023 naito children's clinic. All Rights Reserved
+                </address>
             </footer>
 
             <div class="to_top">
@@ -360,7 +258,6 @@
                 ></a>
             </div>
 
-            <!-- ここからモーダルエリアです。 -->
             <div id="modal-1" aria-hidden="true" class="micromodal-slide modal">
                 <div class="modal__overlay" tabindex="-1" data-micromodal-close>
                     <div
@@ -371,7 +268,7 @@
                     >
                         <div class="modal__header">
                             <h2 id="modal-1-title" class="modal__title">
-                                お知らせタイトル
+                                年末・年始のお休みについて
                             </h2>
                             <button
                                 class="modal__close"
@@ -379,10 +276,11 @@
                                 data-micromodal-close
                             ></button>
                         </div>
-                        <p>2020/12/11</p>
+                        <p>2023.12.23</p>
                         <div id="modal-1-content" class="modal__content">
-                            お知らせ内容テキストお知らせ内容テキストお知らせ内容テキスト<br />
-                            お知らせ内容テキストお知らせ内容テキストお知らせ内容テキスト
+                            年末年始休診日は下記のとおりです。<br />
+                            2023年12月29日(金)～2024年1月3日(水)まで休診となります。<br />
+                            ご迷惑をおかけしますが、よろしくお願いします。
                         </div>
                         <div class="modal__footer"></div>
                     </div>
