--- a/works.html
+++ b/works.html
@@ -9,14 +9,8 @@
         />
 
         <title>ないとうこどもクリニック</title>
-        <meta
-            name="Keywords"
-            content="レスポンシブ,HTMLテンプレート,ホームページ制作"
-        />
-        <meta
-            name="Description"
-            content="最新レスポンシブHTMLテンプレート no.005。このサイトの説明文を入れてください。"
-        />
+        <meta name="Keywords" content="" />
+        <meta name="Description" content="" />
 
         <link rel="stylesheet" href="css/style.css" />
 
@@ -28,7 +22,6 @@
             href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
             rel="stylesheet"
         />
-        <!-- ZEN MARU GOCHIC -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -44,7 +37,7 @@
 
                 <h1>
                     <a href="index.html"
-                        ><img src="img/demo-img/ico_cat01_brown.png"
+                        ><img src="img/naito-child-clinic-logo.png"
                     /></a>
                 </h1>
 
@@ -83,130 +76,37 @@
                     <h2>診療内容</h2>
                     <h3>小児科</h3>
                     <div class="img_right">
-                        <img src="img/26956869_s.jpg" alt="サンプルイメージ" />
+                        <img src="img/26956869_s.jpg" alt="" />
                     </div>
                     <p>
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
+                        発熱をはじめ、咳や鼻水、嘔吐や下痢などの小児内科全般をおこなっております。外科的治療は行っておりません。診察させていただき、緊急性の高い場合は総合病院への紹介などの対応をさせていただくことがあります。
+                        <br />また、夜間や休日に具合の悪くなった場合は、時間帯によって急病センターや小児科二次救急当番病院、小児科当番医（クリニック）にて対応となる場合がございます。
                     </p>
                 </div>
                 <div class="cont_wrap effect">
                     <h3>乳幼児健診</h3>
                     <div class="img_left">
-                        <img src="img/4461392_s.jpg" alt="サンプルイメージ" />
+                        <img src="img/4461392_s.jpg" alt="" />
                     </div>
                     <p>
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
+                        乳幼児健診は、万が一病気を患っている場合に早期に発見することも重要ですが、お子様が健やかに、元気に成長する姿をチェックすることで、こどもはもちろんご家族を含めた全ての人に安心して子育てできるようにサポートすることを目標としております。<br />
+                        そのため、日頃の子育てに関して疑問に思っているや些細なことでも、気軽に相談してください。お子様の成長を評価するため、ご家族の情報がとても大切になります。
                     </p>
                 </div>
-                <!-- 3つ目追加　位置変えたい -->
                 <div class="cont_wrap effect">
                     <h3>予防接種</h3>
                     <div class="img_right">
-                        <img src="img/1381640_s.jpg" alt="サンプルイメージ" />
+                        <img src="img/1381640_s.jpg" alt="" />
                     </div>
                     <p>
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
-                        診療内容についての説明 診療内容についての説明
+                        予防接種は、院内感染をできる限り減らすように、原則として専用の時間帯にて対応させていただいてます。予約の際は直接当院へご連絡頂き、日時・時間帯の調整をさせていただきます。
+                        <br />
+                        ご持参いただくものとしては、予防接種シール、母子健康手帳、保険証、診察券が必要となりますので、あらかじめご準備をお願いいたします。また、予防接種は生後2ヶ月から可能となりますのでお間違いのないようおねがいいたします。
                     </p>
                 </div>
-
-                <div class="contact effect">
-                    <div class="box_att effect">
-                        <h2>お問い合わせ</h2>
-                    </div>
-                    <div class="contact__textbox contact-text effect">
-                        <p>お気軽にご相談ください！</p>
-                        <div class="btn_cnt">
-                            <a href="#"
-                                ><i class="fas fa-arrow-right"></i>お問い合せ</a
-                            >
-                        </div>
-                        <p class="contact-text__tell">
-                            <a href="#" class="tel"
-                                ><i class="fas fa-phone-alt"></i
-                                ><strong>0120-000-0000</strong></a
-                            ><br />
-                            電話受付時間　平日8：00～17：00
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <!--/content-->
-
             <footer>
-                <div class="footer effect">
-                    <div class="footer__infomation">
-                        <div class="base-info">
-                            <div class="base-info__logo">
-                                <img
-                                    src="img/demo-img/ico_cat01_brown.png"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="base-info__text">
-                                <p>
-                                    ないとうこどもクリニック<br />
-                                    静岡県静岡市駿河区◯◯<br />
-                                    TEL.0120-000-0000
-                                </p>
-                            </div>
-                        </div>
-                        <div class="map">Google map</div>
-                    </div>
-
-                    <div class="footer__nav">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="concept.html">当院について</a></li>
-                            <li><a href="works.html">診療内容</a></li>
-                            <li><a href="about.html">お知らせ</a></li>
-                            <li><a href="about.html">コラム</a></li>
-                            <li><a href="about.html">お問合せ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/cont_wrap-->
-
-                <address>Copyright (C) saimon. All Rights Reserved.</address>
-
-                <!--　削除禁止【ＰＲ枠】ここから　-->
-                <!--prno.220309ver3.1-->
-                <div class="box_pr">
-                    <ul>
-                        <li>
-                            Design by
-                            <a
-                                href="https://www.megapx.com/"
-                                title="ホームページ制作・ロゴデザイン：メガピクス"
-                                target="_blank"
-                                >Megapx</a
-                            >
-                        </li>
-                        <li>
-                            Template by
-                            <a
-                                href="https://www.s-hoshino.com/"
-                                title="HTMLテンプレート配布元：フリー素材屋Hoshino"
-                                target="_blank"
-                                >s-hoshino.com</a
-                            >、<a
-                                href="https://www.sozai-dx.com/"
-                                title="無料素材・フリー素材DX"
-                                target="_blank"
-                                >sozai-dx.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <!--　/削除禁止【ＰＲ枠】ここまで　-->
+                <address>©2023 naito children's clinic. All Rights Reserved</address>
             </footer>
-
             <div class="to_top">
                 <a href="#"
                     ><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
